<resources>
    <string name="app_name">Wallet</string>
    <string name="lbl_wallet_cards">My Wallet</string>
    <string name="lbl_powered_by_wallet_cards_alliance">Powered by Wallet Cards Alliance</string>
    <string name="lbl_info">Info</string>
    <string name="lbl_boarding_passes_reward_programmes_and_tickets_nall_in_one_place">Boarding Passes, Reward Programmes and Tickets.\nAll in One Place!</string>
    <string name="lbl_add">Add</string>
    <string name="lbl_store_your_credit_debit_cards_securely">Store your credit / debit cards securely</string>
    <string name="lbl_store_your_credit_cards_nwith_wallet_cards">Store Your Credit Cards\nwith Wallet Cards</string>
    <string name="lbl_scan_qr_code">Scan QR Code</string>
    <string name="content_description_close_dialog">close dialog</string>
    <string name="lbl_add_passes_to_your_wallet_passbook_only">Add passes to your Wallet</string>
    <string name="lbl_add_new_credit_debit_card">Add new credit/debit card</string>
    <string name="lbl_import_from_device_pkpass_file">Import from device (.pkpass file)</string>
    <string name="lbl_watch_tutorial_on_youtube">WATCH TUTORIAL ON YOUTUBE</string>
    <string name="lbl_card_details">Card Details</string>
    <string name="lbl_store_your_card_information_securely">Store your card information securely</string>
    <string name="lbl_name">Name</string>
    <string name="lbl_required">Required</string>
    <string name="lbl_card_number">Card Number</string>
    <string name="lbl_expiry_date">Expiry Date</string>
    <string name="lbl_security_code">Security Code</string>
    <string name="lbl_3_digit_cvv">3-digit CVV</string>
    <string name="card_name">Card Name</string>
    <string name="your_card_data_will_be_stored_offline_on_your_device_only">🔒 Your card data will be stored offline on your device only.</string>
    <string name="lbl_select_card_color">Select Card Color</string>
    <string name="lbl_done">Done</string>
    <string name="lbl_remove_pass">Remove pass</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="ic_close">ic_close</string>
    <string name="wallet_icon">wallet_icon</string>
    <string name="become_a_premium">Become a premium</string>
    <string name="unlock_the_full_experience">Unlock The Full Experience</string>
    <string name="continue_text">Continue</string>
    <string name="rub_1_799_year_after_free_7_days_trial">RUB 1,799/year after Free 7-days trial</string>
    <string name="spannable_text">By continuing you agree to our Terms and Privacy policies. Subscription will auto-renew. Cancel anytime.</string>
    <string name="unlimited_cards">Unlimited Cards</string>
    <string name="you_haven_t_added_any_cards_yet">add new card now</string>
    <string name="add_card">Add Card</string>
    <string name="card_design">card_design</string>
    <string name="menu">menu</string>
    <string name="card">Card</string>
    <string name="backbtn">backbtn</string>
    <string name="share">Share</string>
    <string name="delete">Delete</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="the_card_pass_will_nbe_permanently_deleted">The card/pass will be permanently deleted.</string>
    <string name="are_you_sure">Are you sure?</string>
    <string name="update">Update</string>
    <string name="enter_some_notes">Enter some notes</string>
    <string name="note">Note:</string>
    <string name="enter_cvv">Enter CVV</string>
    <string name="cvv">CVV</string>
    <string name="select_exp_date">Select exp date</string>
    <string name="valid_thru">Valid thru</string>
    <string name="enter_card_number">Enter card number</string>
    <string name="card_number">Card Number</string>
    <string name="enter_cardholder_name">Enter cardholder name</string>
    <string name="full_name">Full Name</string>
    <string name="enter_card_name">Enter card name</string>
    <string name="card_name_">Card name</string>
    <string name="edit">Edit</string>
    <string name="card_details">Card details</string>
    <string name="brush">brush</string>
    <string name="select_card_design">Select Card Design</string>
    <string name="by_continuing_you_agree_to_our_terms_and_privacy_policies_subscription_will_auto_renew_cancel_anytime">By continuing you agree to our Terms and Privacy policies. Subscription will auto-renew. Cancel anytime.</string>
    <string name="backgroundimage">backgroundImage</string>
    <string name="card_type">card_type</string>
</resources>