<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/dialog_background">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/lbl_scan"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="10dp"
                android:text="@string/lbl_scan_qr_code"
                android:textColor="@color/black_333333"
                android:textSize="25sp"
                android:fontFamily="@font/cerapro_medium"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/btn_close"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="15dp"
                android:background="?attr/selectableItemBackground"
                android:src="@drawable/ic_close"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:tint="@color/black_333333"
                tools:ignore="ContentDescription" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView
            android:id="@+id/lbl_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:paddingStart="15dp"
            android:paddingEnd="10dp"
            android:text="@string/lbl_add_passes_to_your_wallet_passbook_only"
            android:textColor="@color/black_333333"
            android:fontFamily="@font/cerapro_medium"
            android:textSize="15sp" />

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:cardCornerRadius="10dp"
            android:layout_marginHorizontal="15dp"
            android:layout_marginTop="15dp">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <com.journeyapps.barcodescanner.DecoratedBarcodeView
                    android:id="@+id/qr_scanner"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:background="@drawable/bg_rounded"
                    android:clipChildren="true"
                    android:clipToPadding="true"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintDimensionRatio="1:1"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.cardview.widget.CardView>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_add_card"
            style="@style/outlineButtonTheme"
            android:text="@string/lbl_add_new_credit_debit_card"
            app:icon="@drawable/card_icon" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_import_device"
            style="@style/outlineButtonTheme"
            android:text="@string/lbl_import_from_device_pkpass_file"
            app:icon="@drawable/download_icon"
            android:layout_marginBottom="10dp"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_tutorial"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:layout_marginHorizontal="15dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="10dp"
            android:text="@string/lbl_watch_tutorial_on_youtube"
            android:textAlignment="textStart"
            android:textColor="@color/white"
            app:backgroundTint="@color/red"
            android:visibility="gone"
            android:fontFamily="@font/sf_pro_display_semibold"
            app:cornerRadius="10dp"
            app:icon="@drawable/ic_play_circle"
            app:iconSize="24dp"
            app:iconTint="@color/white" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>

