<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/valid_field_layout"
        style="@style/Add_card_llStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/cvv_layout"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/tv_valid"
            style="@style/cerave_regular_style"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="bottom|start"
            android:text="@string/valid_thru"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edt_date"
            style="@style/textFieldStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:enabled="false"
            android:hint="@string/select_exp_date"
            android:inputType="number"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_valid" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cvv_layout"
        style="@style/Add_card_llStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintStart_toEndOf="@id/valid_field_layout"
        app:layout_constraintTop_toTopOf="parent">
        <!-- CVV Section -->
        <TextView
            android:id="@+id/tv_cvv"
            style="@style/cerave_regular_style"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="bottom|start"
            android:text="@string/cvv"
            app:layout_constraintEnd_toStartOf="@+id/eye_toggle"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edt_security_code"
            style="@style/textFieldStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:enabled="false"
            android:hint="@string/enter_cvv"
            android:inputType="number"
            android:maxLength="3"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/eye_toggle"
            app:layout_constraintHorizontal_weight="1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_cvv" />

        <!-- Eye Toggle Icon -->
        <ImageView
            android:id="@+id/eye_toggle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/icon_visible"
            android:visibility="visible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>




</androidx.constraintlayout.widget.ConstraintLayout>