<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="0dp"
        app:elevation="4dp">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/topToolbar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/screen_new_background"
            app:contentInsetEnd="0dp"
            app:contentInsetLeft="0dp"
            app:contentInsetRight="0dp"
            app:contentInsetStart="0dp"
            app:layout_scrollFlags="scroll|enterAlways"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <Button
                    android:id="@+id/btn_back"
                    style="@style/popUpDialogTextStyle"
                    android:layout_gravity="center|start"
                    android:background="@color/zxing_transparent"
                    android:contentDescription="@string/backbtn"
                    android:gravity="start|center"
                    android:minWidth="40dp"
                    android:minHeight="40dp"
                    android:src="@drawable/back_btn"
                    app:icon="@drawable/back_btn"
                    app:iconTint="@color/black_333333"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/toolbar_title"
                    style="@style/CustomToolbarTitleStyle"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="2dp"
                    android:text="@string/card"
                    app:layout_constraintBottom_toBottomOf="@+id/btn_back"
                    app:layout_constraintStart_toEndOf="@+id/btn_back"
                    app:layout_constraintTop_toTopOf="@+id/btn_back" />

                <Button
                    android:id="@+id/action_more"
                    style="@style/popUpDialogTextStyle"
                    android:contentDescription="@string/menu"

                    android:gravity="end|center"
                    app:icon="@drawable/menu_icon"
                    app:iconTint="@color/color_303030"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.appcompat.widget.Toolbar>

    </com.google.android.material.appbar.AppBarLayout>
</FrameLayout>